Fix the height CSS helpers not working correctly on iOS Safari

--- a/src/scss/helpers/_size.scss
+++ b/src/scss/helpers/_size.scss
@@ -1,13 +1,16 @@
 .min-vh-100-header {
   min-height: calc(100vh - var(--bs-header-height, 0px));
+  min-height: calc(100dvh - var(--bs-header-height, 0px));
 }
 
 .vh-100-header {
   height: calc(100vh - var(--bs-header-height, 0px));
+  height: calc(100dvh - var(--bs-header-height, 0px));
 }
 
 .max-vh-100-header {
   max-height: calc(100vh - var(--bs-header-height, 0px));
+  max-height: calc(100dvh - var(--bs-header-height, 0px));
 }
 
 .min-h-100 {
